# MediaServer

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  run.bat  run.sh
backend/: __init__.py  config.py  logging_config.py  main.py
backend/cache/: __init__.py  cache_manager.py
backend/middleware/: __init__.py  concurrency_limiter.py  error_handler.py  rate_limiter.py
backend/modules/: __init__.py  archive.py  comic_reader.py  filesystem.py  range_parser.py  video_stream.py
backend/routers/: __init__.py  archive.py  comic.py  files.py  library.py  settings.py  video.py
backend/services/: __init__.py  app_settings.py  archive.py  comic_reader.py  filesystem.py  library_snapshot.py  media_library.py  range_parser.py  video_stream.py
config/: config.yaml
docs/: project-refactor-phase1.md
frontend/: app.js  gen_css.py  index.html  styles.css
frontend/js/: api.js  app.backup.js  config.js  main.js  player.js  store.js  ui.js  utils.js  views.js
tests/: test_api_endpoints.py  test_core.py
